# jlogan_notes

./: .gitignore  README.md
conference_materials/Rust_Boston_2026/: main.py  pyproject.toml
conference_materials/Rust_Boston_2026/rust_boston_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conference_materials/Rust_Boston_2026/scripts/: float64_value_equation.py  float_relative_resolution.html  float_resolution_plot.py  lagrange_multipliers.html  lagrange_multipliers_plot.py  slice_mul.rs  type_2_example.rs  type_2_example_fma.rs
conference_materials/SCR2025/: filter_bode.py  filter_delay.py
